add layout to tablet

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   <header>
     <!-- ----------NavBar ------- -->
-    <nav class="navbar navbar-expand-xl navbar-light bg-white">
+    <nav class="navbar navbar-expand-xl navbar-light ">
       <div class="container-fluid">
         <div class="nav__logo">
           <a class="navbar-brand" href="#"><img src="./assets/logo.png" alt="logo" class="logo"></a>
@@ -72,7 +72,7 @@
         </div>
 
         <div class="wrapper__btn">
-          <button href="">Let's discover</button>
+          <button>Let's discover</button>
         </div>
 
       </div>
@@ -91,12 +91,12 @@
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
         pariatur. </p>
-      <a href="">hang in there</a>
+      <a href="">Hang in there</a>
     </div>
   </section>
   <!-- ----------Bloc2 ------- -->
   <section class="bloc__services__container">
-    <!-- ----------Line ------- -->
+
     <div class="line"></div>
     <div class="bloc__services__main">
       <h2>Don’t forget about the spacing! It’s very important</h2>
@@ -129,10 +129,10 @@
   </section>
   <!-- ----------Footer ------- -->
   <footer class="row">
-    <div class="col-xl-4 footer__logo">
+    <div class="col-xl-4 col-md-6 footer__logo">
       <img src="./assets/logo.png" alt="">
     </div>
-    <div class="col-xl-4 footer__input_wrapper">
+    <div class="col-xl-4 col-md-6 footer__input_wrapper">
       <h4>Send us your email to stay tuned</h4>
       <div class="footer__input">
         <input type="text" placeholder="yourmail@email.com">
