--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap"
     rel="stylesheet">
-
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="shortcut icon" href="./assets/logo.png" type="image/x-icon">
   <title>Aleia</title>
 </head>
 
