--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
     <div class="col-xl-4 footer__social-media-wrapper">
       <h4>Follow us</h4>
       <div class="footer__social-media">
-        <img src="./assets/facebook.png" alt="facebook">
-        <img src="./assets/linkedin.png" alt="linkedin">
-        <img src="./assets/twitter.png" alt="twitter">
+        <a href="https://facebook.com/" target="_blank"><img src="./assets/facebook.png" alt="facebook"></a>
+        <a href="https://linkedin.com/" target="_blank"><img src="./assets/linkedin.png" alt="linkedin"></a>
+        <a href="https://twitter.com/" target="_blank"><img src="./assets/twitter.png" alt="twitter"></a>
       </div>
     </div>
   </footer>
