--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
   <meta charset="UTF-8">
@@ -21,7 +21,8 @@
 <body>
 
   <header>
-    <!-- ----------NavBar ------- -->
+    <!-- ====== NavBar =======  -->
+
     <nav class="navbar navbar-expand-xl navbar-light ">
       <div class="container-fluid">
         <div class="nav__logo">
@@ -58,7 +59,7 @@
 
       </div>
     </nav>
-    <!-- ----------Hero ------- -->
+    <!-- ====== HERO =======  -->
     <div class="main">
       <div class="main__information">
         <h1>BE CAREFUL TO RESPECT THE DESIGN!</h1>
@@ -80,7 +81,7 @@
       </div>
     </div>
   </header>
-  <!-- ----------BLOC1 ------- -->
+  <!-- ====== BLOC1 =======  -->
   <section class="bloc row">
     <div class="col-xl-6 bloc__left">
       <h2>Good luck about this block. Don’t forget to respect the different breakpoints</h2>
@@ -93,7 +94,7 @@
       <a href="">Hang in there</a>
     </div>
   </section>
-  <!-- ----------Bloc2 ------- -->
+  <!-- ====== BLOC2 =======  -->
   <section class="bloc__services__container">
 
     <div class="line"></div>
@@ -126,7 +127,7 @@
       <a href="">It’s almost done, don’t give up</a>
     </div>
   </section>
-  <!-- ----------Footer ------- -->
+  <!-- ====== FOOTER =======  -->
   <footer class="row">
     <div class="col-xl-4 col-md-6 footer__logo">
       <img src="./assets/logo.png" alt="">
